Fluid network work